# BobTricks

./: .gitignore  CLAUDE.md  CMakeLists.txt  Doxyfile  Makefile  README.md
.githooks/: post-push  pre-push
.tools/ai-browser-debug/: README.md  package-lock.json  package.json  playwright.config.js
PLAN/: run_mode.md
analysis/: README.md  swing_foot_height.cpp
curves_lab/: README.md
curves_lab/src/: ArcLength.cpp  Bezier2.cpp  Bezier2.h  CatmullRom2.cpp  CatmullRom2.h
data/: config.ini
doc/: ARCHITECTURE.md  ARCHITECTURE_HEADLESS.md  COMMANDS_AND_MODES.md  CONTRIBUTING.md  LOCOMOTION_SPEC.md  README.md  ROADMAP.md  ROADMAP_locomotion.md  STATE_MODEL.md  TESTING_AND_VALIDATION.md  VISION.md  WALKING_REDESIGN_PLAN.md  WALKING_SPEC_V2.md  class_diagram.md  decisions_architecture.md  gantt_bobtricks.xlsx  guide_tuning.md  historique_taches.md  mathematiques.md  ordre_creation.md
doc/documentation/: Doxyfile  README.md
doc/presentation/: README.md  archivos_importantes.md  contenu_presentation_orale.md  plan_presentation_orale.md  presentation_shell.html
doc/project/: README.md
doc/references/: README.md  deep-research-report.md
doc/workflow/: README.md  cmake.md  commits.md  debug.md  forge-publication-workflow.md  git.md  install.md  remotes-and-publication.md  sdl2.md  team-git-workflow.md
experiments/: README.md
experiments/curves_lab/: README.md
include/: app.hpp
scripts/: check_architecture.sh
scripts/dev/: derive_forge_main.sh  derive_forge_snapshot.sh  forge_autopublish.sh  forge_bootstrap.sh  forge_check_batch.sh  forge_prepare_batch.sh  forge_publish_batch.sh  install_git_hooks.sh  run_native.sh
src/: app.cpp  main.cpp
src/app/: Application.cpp  Application.h  Application.hpp  AudioSystem.cpp  AudioSystem.h  EffectsSystem.cpp  EffectsSystem.h  InputController.cpp  InputController.h  SimulationLoop.cpp  SimulationLoop.hpp
src/config/: AppConfig.h  ConfigIO.cpp  ConfigIO.h
src/debug/: DebugUI.cpp  DebugUI.h  (+1 more)
src/render/: Camera2D.h  (+15 more)
tests/: TestSupport.h
(+185 files in other folders)
